[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/lselect_level@2x.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/lselect_level_locked@2x.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_star_gray@2x.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_star_yellow@2x.png" type="Texture" id=4]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/splash_logo@2x.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/ui_nw_ground_block@2x.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/essai.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/lselect_button_back@2x.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/retry.png" type="Texture" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "essai.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ui_nw_ground_block@2x.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2( 82.2017, 0 )

[node name="Button1" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 201.815
margin_top = 48.772
margin_right = 251.815
margin_bottom = 98.772
disabled = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
visible = false
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
visible = false
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
visible = false
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Node2D/Button1"]
margin_left = 5.4393
margin_top = 14.8651
margin_right = 45.4393
margin_bottom = 28.8651
text = "1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite7" type="Sprite" parent="CanvasLayer/Node2D/Button1"]
texture = ExtResource( 2 )
centered = false

[node name="Button2" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 251.815
margin_top = 48.772
margin_right = 301.815
margin_bottom = 98.772
disabled = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Node2D/Button2"]
margin_left = 5.4393
margin_top = 14.8651
margin_right = 45.4393
margin_bottom = 28.8651
text = "2"
align = 1
valign = 1
uppercase = true

[node name="Sprite7" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
texture = ExtResource( 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
visible = false
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
visible = false
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="CanvasLayer/Node2D/Button2"]
visible = false
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Button3" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 301.815
margin_top = 48.772
margin_right = 351.815
margin_bottom = 98.772
disabled = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Node2D/Button3"]
margin_left = 5.4393
margin_top = 14.8651
margin_right = 45.4393
margin_bottom = 28.8651
text = "3"
align = 1
valign = 1
uppercase = true

[node name="Sprite7" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
texture = ExtResource( 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
visible = false
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
visible = false
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="CanvasLayer/Node2D/Button3"]
visible = false
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Button4" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 351.815
margin_top = 48.772
margin_right = 401.815
margin_bottom = 98.772
disabled = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Node2D/Button4"]
margin_left = 5.4393
margin_top = 14.8651
margin_right = 45.4393
margin_bottom = 28.8651
text = "4"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite7" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
texture = ExtResource( 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
visible = false
position = Vector2( 10.2501, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
visible = false
position = Vector2( 25.7273, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="CanvasLayer/Node2D/Button4"]
visible = false
position = Vector2( 40.8076, 37.173 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="Button5" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 201.815
margin_top = 98.772
margin_right = 251.815
margin_bottom = 148.772
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 251.815
margin_top = 98.772
margin_right = 301.815
margin_bottom = 148.772
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 301.815
margin_top = 98.772
margin_right = 351.815
margin_bottom = 148.772
texture_normal = ExtResource( 2 )

[node name="Button8" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 351.815
margin_top = 98.772
margin_right = 401.815
margin_bottom = 148.772
texture_normal = ExtResource( 2 )

[node name="Button9" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 233.176
margin_top = 148.772
margin_right = 283.176
margin_bottom = 198.772
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 282.009
margin_top = 148.772
margin_right = 332.009
margin_bottom = 198.772
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 331.664
margin_top = 148.772
margin_right = 381.664
margin_bottom = 198.772
texture_normal = ExtResource( 2 )

[node name="retour" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = -19.8421
margin_top = 159.387
margin_right = 24.1579
margin_bottom = 203.387
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="TextureButton" parent="CanvasLayer/Node2D"]
margin_left = 581.798
margin_top = 160.0
margin_right = 625.798
margin_bottom = 204.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground"]
scale = Vector2( 0.833, 0.4 )
texture = ExtResource( 6 )
centered = false

[node name="bas" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0 )

[connection signal="pressed" from="CanvasLayer/Node2D/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D/retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D/reset" to="." method="_on_reset_pressed"]
